k8s/examples/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dj-ms-core
  labels:
    app.kubernetes.io/name: dj-ms-core
    app.kubernetes.io/component: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: core.k8s.dj-ms.dev
      http:
        paths:
          - path: /
            backend:
              service:
                name: dj-ms-core
                port:
                  number: 8000
            pathType: ImplementationSpecific
